Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ figure {
   margin: 0;
 }
 
-.unit {
+.img {
   position: relative;
 }
 
